--- a/style.scss
+++ b/style.scss
@@ -1,22 +1,20 @@
 html body{
+    padding:0;
     margin:0;
     width:100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
-
- /*$backGround: rgb(176, 241, 250);*/
-  
- /*$articleBackGround:pink;*/
-
  
 main {
-   /* background: $backGround;*/
-    display:grid;
-    grid-template-columns:1fr 2fr;
-    grid-template-rows:1fr 1fr;
+   
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    
 }
 
 .accueil{
+  position :relative;
   margin-top: 120px;
   padding-top: 400px;
   display: grid;
@@ -25,46 +23,54 @@ main {
   grid-row-start: -1;
   grid-row-end: 1;
   background-image: url("https://sportsante13.fr/wp-content/uploads/2019/10/judo-4454836_1280-1170x550.jpg");
-  background-position: center;
   background-repeat: no-repeat;
-
-        span, h1 {
-            position:absolute;
-            padding-left: 50px;
-            margin-top: -310px;
-            color: white;
-        }
-        span{
-            margin-top:-200px;
-        }  
-
-        .btn{
-            position:absolute;
-            width:200px;
-            padding:auto;
-            margin-left:50px;
-            margin-top:-100px;                 
-        }        
+  
 }
+.accueil span {
+                position:relative;
+                margin-top: -200px;
+                color:white;
+                padding:10px 10px;
+}
+           
+ h1 {
+                position:relative;
+                padding-left: 10px;
+                margin-top: -300px;
+                color: white;
+            }
+.btn{
+                position:relative;
+                width:150px;
+                padding:0 10px;
+                margin-left:50px;
+                margin-top:-100px;
+                margin-bottom: 30px;
+                border-radius: 30px; 
+                border:none; 
+                color:white; 
+                background:rgba(255, 255, 255, 0.3);
+                backdrop-filter:blur(10px);
+                -webkit-backdrop-filter: blur(10px);
+                -moz-backdrop-filter:blur(10px);              
+            }      
 
 aside{
     background:rgb(71, 120, 245);
     margin-top:10px;
+    padding-bottom: 20px;
     padding-top:20px; 
     text-align:center;  
-       
+    
 }
-     
+ 
 .contact{
-    width: 80%;
-    height: 560 px;
+    width:80%;
+    height: 560px;
     background-color: rgba(255, 255, 255, 0.3);
     padding: 2rem;
     margin-top: 40px;
-    margin-left: 40px;
-   
-    
-    
+    margin-left: 30px;
     border-radius: 20px;
     text-align:center;
     border-left:1px solid  rgba(255, 255, 255, 0.3);
@@ -79,14 +85,12 @@ aside{
             color:white;
             opacity:.9;
             text-shadow:2px 2px 4px rgba(0,0,0,.2);
-            
-            }
+             }
     form { 
         position:relative;
         }
     form input {
         margin:10px;
-    
         background: transparent;
         border:none;
         border-left:1px solid rgba(255, 255, 255, 0.3);
@@ -101,9 +105,10 @@ aside{
         color:white;
         text-shadow:2px 2px 4px rgba(0,0,0,.2);
         cursor:pointer;
-        &:hover {
+    }
+        form input:hover {
           background-color: rgba(255,255,255,.3);  }              
-               }
+             
         
     ::placeholder{
         color:white;
@@ -126,12 +131,13 @@ aside{
         box-shadow: 4px 4px 60px rgba(0,0,0,.2);
         color:white;
         text-shadow:2px 2px 4px rgba(0,0,0,.2);
-            &:hover {
+    }
+    textarea:hover {
                  background-color: rgba(255,255,255,.3); 
                 }
            
-                }
-    .container .contact form a{
+              
+    .container #aside .contact form a{
         
         margin-top:30px;
         margin-bottom:20px;
@@ -149,12 +155,12 @@ aside{
         color:white;
         text-shadow:2px 2px 4px rgba(0,0,0,.2);
         cursor:pointer;
-              
-        &:hover {
-        background-color: #01fc4066;
-        text-decoration:none; 
+    }       
+    .container .contact form a:hover {
+            background-color: #01fc4066;
+            text-decoration : none; 
         }              
-     }
+  
         
      .drop{
        background:rgba(255, 255, 255, 0.3);
@@ -168,137 +174,161 @@ aside{
         box-shadow: 10px 10px 60px -8px rgba(0,0,0,.2);
          }   
     .drop-1{
-        height:80px;
-        width:80px;
+        height:70px;
+        width:70px;
         top:-20px;
         left:-40px;
         z-index:-1;
         }
      .drop-2{
-        height:80px;
-        width:80px;
+        height:70px;
+        width:70px;
         bottom:-30px;
         right:-20px;
         z-index:-1;
         }
     .drop-3{
-        height:100px;
-        width:100px;
+        height:90px;
+        width:90px;
         bottom:250px;
         right:-50px;
         z-index:-1;
         }   
      .drop-4{
-        height:90px;
-        width:90px;
+        height:80px;
+        width:80px;
         top:-40px;
         right:-50px;
      
         }
      .drop-5{
-        height:80px;
-        width:80px;
+        height:70px;
+        width:70px;
         bottom:170px;
         left:-30px;
         z-index:-1;
         } 
     .adresse{
-        margin-top:50px;
+        margin-top:30px;
         }
-
-
-
+    .adresse a{
+        text-decoration: none;
+        color: black;
+    }
 
 article{
-            /*background: $articleBackGround;*/
-            margin-top:10px;
-            padding-top:20px;  
-    
-            h2 {
-                    text-transform: uppercase ;
-                    text-align: center;
-                    text-decoration: underline;
-                    margin: 10px 0;
-                    padding-bottom: 20px;     
-                }
-            .carte {
-                     position:relative;
-                     box-sizing:border-box;
-                     max-width :1300px;
-                     width:90%;
-                     height:auto;
-                     display:grid;
-                     grid-template-columns:200px 200px 200px;
-                     grid-template-rows:250px 250px;
-                     justify-content:space-around;
-                     grid-gap:40px;
-                     margin-left:50px;
-                     margin-bottom:30px;
-                     cursor:pointer;
-                    }
-            
-                          
-                 .card{
-                     box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
-                     -webkit-boxshadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
-                     -moz-box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
-                     cursor:pointer;
-                     &:hover{
-                         transform:scale(1.1);
-                         transition: 0.1s all;
-                            }
-                       }  
-    
-                .card_title{
-                    display:flex;
-                    justify-content: center;
-                    font-weight:bold;
-                    background: #fafafa;
-                    text-transform:uppercase;
-                    }
+ background:PINK;
+        margin-top:10px;
+        padding-top:20px;
+        margin-right:-20px;  
+        width:100%;
         
-                .card__content{
-                     padding:15px;
-                    background: #fafafa;
-                    text-align: justify;   
-                  }    
-                } 
-                table{  
-                        justify-items: center;
-                         width:90%;
-                         border-collapse:collapse;
-                         margin:50px;
-                         margin-bottom: 2px;
-                         border:1px solid black;
-                    }
-                thead tr{
-                        text-align:center;
-                        background-color:#d4d4d4bb;
-                         }
-                tbody th{
-                       font-weight:bold;
-                         }
+       
+    } 
+ article h2{
+         text-transform: uppercase ;
+         text-align: center;
+         font-weight: bold;
+         margin: 5px 0;
+         padding-bottom: 10px;  
+         color:#565758;
+       }
+     
+  .carte {
+          position:relative;
+          display:grid;
+          grid-template-columns:200px 200px 200px;
+          grid-template-rows:250px 250px;
+          grid-column-start: 2;
+          grid-column-end: 3;
+          grid-row-start: 2;
+          grid-row-end:4 ;
+          box-sizing:border-box;
+          max-width :1300px;
+          width:80%;
+          height:auto;
+          justify-content:space-around;
+          grid-gap:40px;
+          margin-left:70px;
+          margin-bottom:30px;
+          cursor:pointer;
+          
+         }
+ 
+               
+         article.card{
+          box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
+          -webkit-boxshadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
+          -moz-box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
+          cursor:pointer;
 
-                th,td{
-                        text-align:center;
-                     }
-                tbody tr,td,th{
-                     border:1px solid #b3afaf;
-                        }
-                tbody tr:nth-child(even){
-                     background-color: #f1f0f0;
-                          }
-                tbody tr:last-of-type{
-                     border-bottom:#d4d4d4bb;
-                         }
-                article .event{
-                     text-align:justify;
-                     font-weight:bold;
-                     margin:5px;
-                     background: red;
-                     padding-left:10px;
-                     color:white;
-                     }
+        } 
+        .card:hover{
+              transform:scale(1.1);
+              transition :0.1 s all;
+                 }
+           
+
+        .card_title{
+         display:flex;
+         justify-content: center;
+         font-weight:bold;
+         background: #fafafa;
+         text-transform:uppercase;
+         }
+        .card_img{
+            width:100%;
+            height:auto;
+            overflow: hidden;
+
+        }
+         article.card__content{
+         padding:15px;
+         background: #fafafa;
+         text-align: justify;   
+       }    
+     
+
+     table{  
+              width:90%;
+              border-collapse:collapse;
+              margin:40px;
+              margin-bottom: 2px;
+              border:1px solid black;
+              
+         }
+     thead tr{
+            
+             text-align:center;
+             background-color:#d4d4d4bb;
+              }
+     tbody th{
+            font-weight:bold;
+              }
+
+     th,td{
+             text-align:center;
+          }
+     tbody tr,td,th{
+          border:1px solid #b3afaf;
+             }
+     tbody tr:nth-child(even){
+          background-color: #f1f0f0;
+               }
+     tbody tr:last-of-type{
+          border-bottom:#d4d4d4bb;
+              }
+     article .event{
+          text-align:justify;
+          font-weight:bold;
+          font-size:small;
+          margin:20px;
+          background: red;
+          padding:5px 5px;
+          color:white;
+          
+          }
+     
     
      
      
