--- a/style.scss
+++ b/style.scss
@@ -6,10 +6,11 @@ html body{
 }
  
 main {
-   
+    
     display: grid;
     grid-template-columns:1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    
     
 }
 
@@ -48,29 +49,35 @@ main {
                 margin-bottom: 30px;
                 border-radius: 30px; 
                 border:none; 
+                text-decoration: none;
                 color:white; 
                 background:rgba(255, 255, 255, 0.3);
                 backdrop-filter:blur(10px);
                 -webkit-backdrop-filter: blur(10px);
                 -moz-backdrop-filter:blur(10px);              
-            }      
+            }  
+.btn:hover{
+                text-decoration: none;
+                color:black;
+            }    
 
 aside{
-    background:rgb(71, 120, 245);
+    background:rgb(230, 232, 232);
+    
     margin-top:10px;
     padding-bottom: 20px;
     padding-top:20px; 
     text-align:center;  
     
 }
- 
+
 .contact{
-    width:80%;
+    width:75%;
     height: 560px;
     background-color: rgba(255, 255, 255, 0.3);
     padding: 2rem;
     margin-top: 40px;
-    margin-left: 30px;
+    margin-left: 20px;
     border-radius: 20px;
     text-align:center;
     border-left:1px solid  rgba(255, 255, 255, 0.3);
@@ -138,7 +145,6 @@ aside{
            
               
     .container #aside .contact form a{
-        
         margin-top:30px;
         margin-bottom:20px;
         background: transparent;
@@ -155,10 +161,15 @@ aside{
         color:white;
         text-shadow:2px 2px 4px rgba(0,0,0,.2);
         cursor:pointer;
+        
     }       
-    .container .contact form a:hover {
-            background-color: #01fc4066;
+    
+    .container #aside .contact form a:hover {
+            background-color: #09f54466;
             text-decoration : none; 
+            cursor: pointer;
+            transition:0.3s all;       
+
         }              
   
         
@@ -217,10 +228,10 @@ aside{
     }
 
 article{
- background:PINK;
+        
         margin-top:10px;
         padding-top:20px;
-        margin-right:-20px;  
+        margin-right:35px;  
         width:100%;
         
        
@@ -236,6 +247,7 @@ article{
      
   .carte {
           position:relative;
+          
           display:grid;
           grid-template-columns:200px 200px 200px;
           grid-template-rows:250px 250px;
@@ -245,21 +257,22 @@ article{
           grid-row-end:4 ;
           box-sizing:border-box;
           max-width :1300px;
-          width:80%;
+          width:100%;
           height:auto;
           justify-content:space-around;
-          grid-gap:40px;
-          margin-left:70px;
-          margin-bottom:30px;
+          grid-gap:40px 30px;
+          margin:30px 10px;
+      
           cursor:pointer;
+          overflow-wrap: break-word;
           
          }
  
                
-         article.card{
-          box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
-          -webkit-boxshadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
-          -moz-box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
+         article .carte .card{
+            box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
+            -webkit-boxshadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
+            -moz-box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
           cursor:pointer;
 
         } 
@@ -282,25 +295,26 @@ article{
             overflow: hidden;
 
         }
-         article.card__content{
+         .card__content{
          padding:15px;
          background: #fafafa;
          text-align: justify;   
        }    
      
 
-     table{  
-              width:90%;
+    article table{  
+              width:100%;
               border-collapse:collapse;
-              margin:40px;
-              margin-bottom: 2px;
               border:1px solid black;
-              
+              padding-top:40px;
+              margin-top: 50px;
+              margin-left:0px;
          }
      thead tr{
             
              text-align:center;
              background-color:#d4d4d4bb;
+            
               }
      tbody th{
             font-weight:bold;
@@ -319,12 +333,13 @@ article{
           border-bottom:#d4d4d4bb;
               }
      article .event{
+          width:100%;
           text-align:justify;
           font-weight:bold;
           font-size:small;
-          margin:20px;
+          margin:20px 0px;
           background: red;
-          padding:5px 5px;
+          padding:5px;
           color:white;
           
           }
