--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 html body{
     padding:0;
     margin:0;
-    width:100vh;
+    width:100%;
     font-family: Arial, Helvetica, sans-serif;
 }
  
@@ -16,8 +16,8 @@ main {
 
 .accueil{
   position :relative;
-  margin-top: 10px;
-  padding-top: 400px;
+  margin-top: 0.3%;
+  padding-top: 40%;
   display: grid;
   grid-column-start: 1;
   grid-column-end: -1;
@@ -28,25 +28,26 @@ main {
   
 }
 .accueil span {
+                font-size: 1em;
                 position:relative;
-                margin-top: -200px;
+                margin-top: -19%;
                 color:white;
                 padding:10px 10px;
 }
            
  h1 {
                 position:relative;
-                padding-left: 10px;
-                margin-top: -300px;
+                font-size: 2,5em;
+                padding-left: 1%;
+                margin-top: -30%;
                 color: white;
             }
 .btn{
                 position:relative;
-                width:150px;
-                padding:0 10px;
-                margin-left:50px;
-                margin-top:-100px;
-                margin-bottom: 30px;
+                width:15%;
+                margin-left:5%;
+                margin-top:-10%;
+                margin-bottom: 3%;
                 border-radius: 30px; 
                 border:none; 
                 text-decoration: none;
@@ -62,22 +63,20 @@ main {
             }    
 
 aside{
-    background:rgb(230, 232, 232);
-    
-    margin-top:10px;
-    padding-bottom: 20px;
-    padding-top:20px; 
+    background:rgb(230, 232, 232); 
+    margin-top:1%;
+    padding-top: 2%; 
     text-align:center;  
     
 }
 
 .contact{
-    width:75%;
-    height: 560px;
+    width:73%;
+    height: auto;
     background-color: rgba(255, 255, 255, 0.3);
-    padding: 2rem;
-    margin-top: 40px;
-    margin-left: 20px;
+    padding:10%;
+    margin-top: 10%;
+    margin-left: 10%;
     border-radius: 20px;
     text-align:center;
     border-left:1px solid  rgba(255, 255, 255, 0.3);
@@ -97,13 +96,13 @@ aside{
         position:relative;
         }
     form input {
-        margin:10px;
+        margin:3%;
         background: transparent;
         border:none;
         border-left:1px solid rgba(255, 255, 255, 0.3);
         border-top:1px solid rgba(255, 255, 255, 0.3);
         padding:0.5rem;
-        width:200px;
+        width:100%;
         border-radius:50px;
         backdrop-filter:blur(5px);
         -webkit-backdrop-filter: blur(5px);
@@ -256,7 +255,7 @@ article{
           grid-row-start: 2;
           grid-row-end:4 ;
           box-sizing:border-box;
-          max-width :1300px;
+          max-width :1200px;
           width:100%;
           height:auto;
           justify-content:space-around;
@@ -344,7 +343,36 @@ article{
           
           }
      
+    @media screen and (max-width: 400px){
+header img{
+    width:40%;
+    height:auto;
+    border:border-box;
+}
+        h1{
+    color:red;
+    margin:-10% auto;
+}
+main{
+    display:block;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+aside{
+    display:block;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+article{
+    display: block;
     
+}
+.card{
+    display:block;
+    flex-wrap: wrap;
+}
+
+    }
      
      
          
