--- a/design.css
+++ b/design.css
@@ -1,61 +1,80 @@
 html body {
+  padding: 0;
   margin: 0;
-  width: 100vh;
+  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/*$backGround: rgb(176, 241, 250);*/
-/*$articleBackGround:pink;*/
 main {
-  /* background: $backGround;*/
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-raws: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 .accueil {
-  margin-top: 120px;
-  padding-top: 400px;
+  position: relative;
+  margin-top: 0.3%;
+  padding-top: 40%;
   display: grid;
   grid-column-start: 1;
   grid-column-end: -1;
-  grid-raw-start: 1;
-  grid-raw-end: 2;
+  grid-row-start: -1;
+  grid-row-end: 1;
   background-image: url("https://sportsante13.fr/wp-content/uploads/2019/10/judo-4454836_1280-1170x550.jpg");
-  background-position: center;
   background-repeat: no-repeat;
 }
-.accueil span, .accueil h1 {
-  position: absolute;
-  padding-left: 50px;
-  margin-top: -310px;
+
+.accueil span {
+  font-size: 1em;
+  position: relative;
+  margin-top: -19%;
+  color: white;
+  padding: 10px 10px;
+}
+
+h1 {
+  position: relative;
+  font-size: 2, 5em;
+  padding-left: 1%;
+  margin-top: -30%;
   color: white;
 }
-.accueil span {
-  margin-top: -200px;
+
+.btn {
+  position: relative;
+  width: 15%;
+  margin-left: 5%;
+  margin-top: -10%;
+  margin-bottom: 3%;
+  border-radius: 30px;
+  border: none;
+  text-decoration: none;
+  color: white;
+  background: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  -moz-backdrop-filter: blur(10px);
 }
-.accueil .btn {
-  position: absolute;
-  width: 200px;
-  padding: auto;
-  margin-left: 50px;
-  margin-top: -100px;
+
+.btn:hover {
+  text-decoration: none;
+  color: black;
 }
 
 aside {
-  background: linear-gradient(45deg, #3cf3f3, #3f5efb);
-  margin-top: 10px;
-  padding-top: 20px;
+  background: #e6e8e8;
+  margin-top: 1%;
+  padding-top: 2%;
   text-align: center;
 }
 
 .contact {
-  padding: 2rem;
-  margin-top: 40px;
-  margin-left: 40px;
+  width: 73%;
+  height: auto;
   background-color: rgba(255, 255, 255, 0.3);
-  height: 560px;
-  width: 80%;
+  padding: 10%;
+  margin-top: 10%;
+  margin-left: 10%;
   border-radius: 20px;
   text-align: center;
   border-left: 1px solid rgba(255, 255, 255, 0.3);
@@ -78,13 +97,13 @@ form {
 }
 
 form input {
-  margin: 10px;
+  margin: 3%;
   background: transparent;
   border: none;
   border-left: 1px solid rgba(255, 255, 255, 0.3);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   padding: 0.5rem;
-  width: 200px;
+  width: 100%;
   border-radius: 50px;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -94,6 +113,7 @@ form input {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
+
 form input:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
@@ -120,11 +140,12 @@ textarea {
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
+
 textarea:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.container .contact form a {
+.container #aside .contact form a {
   margin-top: 30px;
   margin-bottom: 20px;
   background: transparent;
@@ -142,9 +163,12 @@ textarea:hover {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
-.container .contact form a:hover {
-  background-color: #01fc4066;
+
+.container #aside .contact form a:hover {
+  background-color: #09f54466;
   text-decoration: none;
+  cursor: pointer;
+  transition: 0.3s all;
 }
 
 .drop {
@@ -160,107 +184,128 @@ textarea:hover {
 }
 
 .drop-1 {
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
   top: -20px;
   left: -40px;
   z-index: -1;
 }
 
 .drop-2 {
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
   bottom: -30px;
   right: -20px;
   z-index: -1;
 }
 
 .drop-3 {
-  height: 100px;
-  width: 100px;
+  height: 90px;
+  width: 90px;
   bottom: 250px;
   right: -50px;
   z-index: -1;
 }
 
 .drop-4 {
-  height: 90px;
-  width: 90px;
+  height: 80px;
+  width: 80px;
   top: -40px;
   right: -50px;
 }
 
 .drop-5 {
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
   bottom: 170px;
   left: -30px;
   z-index: -1;
 }
 
 .adresse {
-  margin-top: 50px;
+  margin-top: 30px;
+}
+
+.adresse a {
+  text-decoration: none;
+  color: black;
 }
 
 article {
-  /*background: $articleBackGround;*/
   margin-top: 10px;
   padding-top: 20px;
+  margin-right: 35px;
+  width: 100%;
 }
+
 article h2 {
   text-transform: uppercase;
   text-align: center;
-  text-decoration: underline;
-  margin: 10px 0;
-  padding-bottom: 20px;
+  font-weight: bold;
+  margin: 5px 0;
+  padding-bottom: 10px;
+  color: #565758;
 }
-article .carte {
-  box-sizing: border-box;
-  max-width: 1300px;
-  width: 90%;
-  height: auto;
+
+.carte {
+  position: relative;
   display: grid;
   grid-template-columns: 200px 200px 200px;
-  grid-template-raws: 250px 250px 250px;
+  grid-template-rows: 250px 250px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  box-sizing: border-box;
+  max-width: 1200px;
+  width: 100%;
+  height: auto;
   justify-content: space-around;
-  grid-gap: 30px;
-  margin-left: 50px;
-  margin-bottom: 30px;
+  grid-gap: 40px 30px;
+  margin: 30px 10px;
   cursor: pointer;
-  transition: 0.1s all;
+  overflow-wrap: break-word;
 }
-article .carte :hover {
-  transform: scale(1.1);
-}
+
 article .carte .card {
+  box-shadow: 9px 10px 7px 2px rgba(107, 104, 104, 0.35);
+  -webkit-boxshadow: 9px 10px 7px 2px rgba(107, 104, 104, 0.35);
   -moz-box-shadow: 9px 10px 7px 2px rgba(107, 104, 104, 0.35);
-  -webkit-box-shadow: 9px 10px 7px 2px rgba(107, 104, 104, 0.35);
-  -moz-box-shadow: 9px 10px 7px 2px rgba(107, 104, 104, 0.35);
+  cursor: pointer;
 }
-article .carte .card_title {
+
+.card:hover {
+  transform: scale(1.1);
+  transition: 0.1 s all;
+}
+
+.card_title {
   display: flex;
   justify-content: center;
   font-weight: bold;
   background: #fafafa;
   text-transform: uppercase;
 }
-article .carte .card__img {
-  object-fit: contain;
+
+.card_img {
   width: 100%;
+  height: auto;
+  overflow: hidden;
 }
-article .carte .card__content {
+
+.card__content {
   padding: 15px;
   background: #fafafa;
   text-align: justify;
 }
 
-table {
-  justify-items: center;
-  width: 90%;
+article table {
+  width: 100%;
   border-collapse: collapse;
-  margin: 50px;
-  margin-bottom: 2px;
   border: 1px solid black;
+  padding-top: 40px;
+  margin-top: 50px;
+  margin-left: 0px;
 }
 
 thead tr {
@@ -289,12 +334,48 @@ tbody tr:last-of-type {
 }
 
 article .event {
+  width: 100%;
   text-align: justify;
   font-weight: bold;
-  margin: 5px;
+  font-size: small;
+  margin: 20px 0px;
   background: red;
-  padding-left: 10px;
+  padding: 5px;
   color: white;
+}
+
+@media screen and (max-width: 400px) {
+  header img {
+    width: 40%;
+    height: auto;
+    border: border-box;
+  }
+
+  h1 {
+    color: red;
+    margin: -10% auto;
+  }
+
+  main {
+    display: block;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  aside {
+    display: block;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  article {
+    display: block;
+  }
+
+  .card {
+    display: block;
+    flex-wrap: wrap;
+  }
 }
 
 /*# sourceMappingURL=design.css.map */
