ajustement height form

--- a/style.scss
+++ b/style.scss
@@ -245,7 +245,7 @@ article .carte .card{
         
               width:100%;
               border-collapse:collapse;
-              border:1px solid black;
+              
               padding-top:1%;
               margin-top: 1%;
              
@@ -283,7 +283,16 @@ article .carte .card{
           padding:5px;
           color:white;
              }
-
+             
+            /* @media screen and (max-width:500px){    
+             article table{  
+                :100%;
+                border-collapse:collapse;
+                border:1px solid black;
+                padding-top:10%;
+                margin-top: 10%;
+               }
+            }*/
  @media screen and (min-width:1200px){
     main{
         display:grid;
@@ -306,7 +315,7 @@ article .carte .card{
                           font-size: 1em;
                           margin-top: -15%;
                           margin-right: 60%;
-                       padding-left: 2%;
+                          padding-left: 2%;
                           color:white;              
           }
                      
@@ -342,27 +351,28 @@ article .carte .card{
                       }    
           
           aside{
-            display: grid;
-            grid-column-start: 1;
-            grid-column-end: 2;
-            grid-row-start:2;
-            grid-row-end: 3;
-              background:rgb(230, 232, 232); 
-              margin-top:5%;
-              padding-top: 15%; 
-              text-align:center; 
+                         height:100%;
+                         display: grid;
+                         grid-column-start: 1;
+                         grid-column-end: 2;
+                         grid-row-start:2;
+                         grid-row-end: 3;
+                         background:rgb(230, 232, 232); 
+                         margin-top:5%;
+                         padding-top: 15%; 
+                         text-align:center; 
      
               
           }
           
           .contact{
-              width:80%;
-              height:auto;
-              background-color: rgba(255, 255, 255, 0.3);
-              padding:10%;
-              padding-left: 5%;
-              margin-top: 20%;
-              margin-left: 10%;
+                          width:80%;
+                         height:auto;
+                         background-color: rgba(255, 255, 255, 0.3);
+                         padding:10%;
+                        padding-left: 5%;
+                        margin-top: 20%;
+                        margin-left: 10%;
               border-radius: 20px;
               text-align:center;
               border-left:1px solid  rgba(255, 255, 255, 0.3);
@@ -378,10 +388,7 @@ article .carte .card{
                       opacity:.9;
                       text-shadow:2px 2px 4px rgba(0,0,0,.2);
                        }
-              form { 
-                  position:relative;
-                 
-                  }
+             
               form input {
                   margin:3%;
                   background: transparent;
@@ -596,7 +603,7 @@ article .carte .card{
                         grid-row-end:4 ;    
                         margin-top: 3%;
                         border-collapse:collapse;
-                        border:1px solid black;
+                    
                    
                     
                       
