--- a/activites.css
+++ b/activites.css
@@ -3,7 +3,8 @@ html body{
     margin:0;
     width:90%;
     font-family: Arial, Helvetica, sans-serif;
-    background:blue;
+    background-color: lightgray;
+    
 }
 
 main{
@@ -12,12 +13,39 @@ main{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-left: 5%;
 }
 
-main .evenement{
+main .evenement-title{
 text-transform: uppercase ;
 margin:20px 0;
 font-size: 2rem ;
 font-weight: 600;
 }
+main .evenement-text{
+border: 2px solid black;
+margin:10px 20px;
+padding:5px 5px;
+text-align: justify;
+color: rgb(72, 71, 71);
+background-color: #fff;
 
+}
+main .evenement-subtitle{
+    text-align: center;
+    font-size:1,8em;
+    font-weight: 600;
+}
+.evenement-content{
+    flex-wrap:wrap;
+}
+main img{ 
+    float:left;
+    width:40%;
+    height:30%;
+    overflow: hidden;
+    margin:0 2%;
+    
+}
+ 
+    
